# pi3siembra

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/utec/pi3/siembrahora/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  TelemetryManager.cpp  TelemetryManager.h  native-lib.cpp
app/src/main/java/utec/pi3/siembrahora/: BaseActivity.java  LocaleManager.java  MainActivity.java  MainActivity.kt  NativeBridge.java  SeedSelectionActivity.kt  SettingsActivity.kt  SplashActivity.java  WelcomeActivity.java
app/src/main/java/utec/pi3/siembrahora/Telemetry/: UserActionsTelemetry.kt
app/src/main/java/utec/pi3/siembrahora/data/: AppDatabase.kt  CareInstruction.kt  CareInstructionDao.kt  Plant.kt  PlantActionLog.kt  PlantActionLogDao.kt  PlantDao.kt  PlantPhoto.kt  PlantPhotoDao.kt  PlantRepository.kt  Relations.kt  Seed.kt  SeedDao.kt
app/src/main/res/drawable/: circle_bg.xml
app/src/main/res/layout/: activity_seed_selection.xml  activity_settings.xml  activity_welcome.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ay/: strings.xml
app/src/main/res/values-cni/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-qu/: strings.xml
app/src/test/java/utec/pi3/siembrahora/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+3 files in other folders)
